--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,6 @@
-/* Import Bootstrap from CDN. */
+/* Import Bootstrap */
 @import url("../../vendor/bootstrap/css/bootstrap.css");
 
 body .top-level {
-  padding-top: 30px;
+  margin-top: 120px;
 }
