add new depth image

--- a/app/index.html.haml
+++ b/app/index.html.haml
@@ -23,7 +23,7 @@
     %div.container.top-level
       %canvas#magic-eye
       %p
-        %img#depth-image{ src: 'img/depth/bottles.jpg' }
+        %img#depth-image{ src: 'img/depth/bridge.jpg' }
       %p
         %img#texture-image{ src: 'img/pattern/rock.png' }
 
