--- a/app/index.html.haml
+++ b/app/index.html.haml
@@ -6,26 +6,63 @@
     %link{ rel: 'stylesheet', href: 'css/main.css' }
   %body
     / Navigation bar
-    %div.navbar.navbar-inverse.navbar-fixed-top{ role: 'navigation' }
-      %div.container
-        %div.navbar-header
+    .navbar.navbar-inverse.navbar-static-top{ role: 'navigation' }
+      .container
+        .navbar-header
           %button.navbar-toggle{ type: 'button', data-toggle: 'collapse', data-target: '.navbar-collapse' }
             %span.sr-only Toggle navigation
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
           %a.navbar-brand{ href: '#' } Magic-eye generator
-        %div.collapse.navbar-collapse
+        .collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li.active
               %a{ href: '#' } Home
 
-    %div.container.top-level
-      %canvas#magic-eye
-      %p
-        %img#depth-image{ src: 'img/depth/bridge.jpg' }
-      %p
-        %img#texture-image{ src: 'img/pattern/rock.png' }
+    .container
+      %h2 Depth image
+      %img#depth-image.img-responsive.center-block{ src: 'img/depth/bottles.jpg' }
+
+      %h2 Background texture
+      / Rationale for grid. Thumbnail images are 128x128 px which, with a 30px
+      / gutter and 5 px border, turns into a horizontal width of arount 170px. On
+      / a small screen, 750 px, there is room for around 4 per row. On a large
+      / screen, 1170 px, about 6 per-row.
+      .container.texture-group{ data-group: 'texture' }
+        .row
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a.active{ href: '#', data-texture: 'img/pattern/cloth025.jpg' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/cloth025.jpg' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/rock.png' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/rock.png' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/natfl003.jpg' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/natfl003.jpg' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/natfl013.jpg' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/natfl013.jpg' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/natfl049.jpg' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/natfl049.jpg' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/pa048.jpg' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/pa048.jpg' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/water006.jpg' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/water006.jpg' }
+          .col-xs-4.col-sm-3.col-md-2.col-lg-2
+            %a{ href: '#', data-texture: 'img/pattern/water015.gif' }
+              %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/water015.gif' }
+
+      %h2 Generated sterogram
+      %img#stereogram-image.img-responsive.center-block
+
+    #footer
+      .container
+        %p.text-muted
+          %a{ href: 'https://github.com/rjw57/stereogram' } Source code is available on Github
 
     / Load JavaScript for main page
     %script{ src: 'js/main.js' }
