fix typo of 'stereogram'

--- a/app/index.html.haml
+++ b/app/index.html.haml
@@ -56,7 +56,7 @@
             %a{ href: '#', data-texture: 'img/pattern/water015.gif' }
               %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/water015.gif' }
 
-      %h2 Generated sterogram
+      %h2 Generated stereogram
       %img#stereogram-image.img-responsive.center-block
 
     #footer
