start to flesh out textures element

--- a/app/index.html.haml
+++ b/app/index.html.haml
@@ -38,7 +38,12 @@
             %a{ href: '#', data-texture: 'img/pattern/water015.gif' }
               %img.texture.img-thumbnail.img-responsive{ src: 'img/pattern/sq/water015.gif' }
 
-      %textures{ src: 'app/img/pattern/index.json' } 
+      %textures
+        %texture
+        %texture
+        %texture
+        %texture
+        %texture
 
       %h2 Generated stereogram
       %img#stereogram-image.img-responsive.center-block
