--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,7 +2,10 @@
 @import url("../../vendor/bootstrap/css/bootstrap.css");
 
 .texture-group .active .texture { background-color: #428bca; }
-.texture-group .texture { width: 165px; }
+
+/* Fixed aspect ratio responsive element.
+ * See http://f6design.com/journal/2011/10/18/responsive-elements-that-retain-their-aspect-ratio/ */
+.texture-group .texture { width: 165px; height:0; padding-bottom: 100%; }
 
 #footer { height: 60px; background-color: #f5f5f5; margin: 20px 0; }
 #footer .container p { margin: 20px 0; }
