--- a/templates/textures.html.haml
+++ b/templates/textures.html.haml
@@ -3,5 +3,4 @@
 -# a small screen, 750 px, there is room for around 4 per row. On a large
 -# screen, 1170 px, about 6 per-row.
 .container.texture-group
-  .row
-    .hello{ ng-transclude: true }
+  .row{ ng-transclude: true }
