--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,11 +1,12 @@
 /* Import Bootstrap */
 @import url("../../vendor/bootstrap/css/bootstrap.css");
 
-.texture-group .active .texture { background-color: #428bca; }
+/* highlight frame of selected texture. */
+.texture-group .texture.selected .texture-frame { background-color: #428bca; }
 
 /* Fixed aspect ratio responsive element.
  * See http://f6design.com/journal/2011/10/18/responsive-elements-that-retain-their-aspect-ratio/ */
-.texture-group .texture { width: 165px; height:0; padding-bottom: 100%; }
+.texture-group .texture .texture-swatch { width: 165px; max-width: 100%; height:0; padding-bottom: 100%; }
 
 #footer { height: 60px; background-color: #f5f5f5; margin: 20px 0; }
 #footer .container p { margin: 20px 0; }
