--- a/templates/texture.html.haml
+++ b/templates/texture.html.haml
@@ -1,3 +1,4 @@
-.col-xs-4.col-sm-3.col-md-2.col-lg-2
-  %a.active{ href: '#' }
-    %img.texture.img-thumbnail.img-responsive{ style: 'background-image: url(img/pattern/sq/cloth025.jpg)' }
+.col-xs-4.col-sm-3.col-md-2.col-lg-2.texture{ ng-class: '{selected: selected}' }
+  %a{ href: '', ng-click: 'selected = true' }
+    .img-thumbnail.texture-frame
+      .texture-swatch{ style: 'background-image: url({{ src }})' }
