re-factor to use webworkers

--- a/app/index.html.haml
+++ b/app/index.html.haml
@@ -29,4 +29,4 @@
           %a{ href: 'https://github.com/rjw57/stereogram' } Source code is available on Github
 
     -# Load JavaScript for main page
-    %script{ src: 'js/main.js' }
+    %script{ data-main: 'js/main', src: 'vendor/require/require.js' }
