add stub texturegroup directive

--- a/app/views/main.html.haml
+++ b/app/views/main.html.haml
@@ -1,7 +1,7 @@
 .container
   %h2 Background texture
 
-  %textures{ ng: { model: 'textureUrl' } }
+  %texturegroup{ ng: { model: 'textureUrl' } }
     %texture{ src: 'img/texture/cloth025.jpg' }
     %texture{ src: 'img/texture/rock.png' }
     %texture{ src: 'img/texture/natfl003.jpg' }
