--- a/app/styles/texturegroup.scss
+++ b/app/styles/texturegroup.scss
@@ -10,5 +10,10 @@
   @extend .img-thumbnail;
 }
 
+// A responsive square aspect ratio element
 .texture-group .texture .texture-frame .texture-swatch {
+  width: 165px;
+  max-width: 100%;
+  height: 0;
+  padding-bottom: 100%;
 };
